--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <!--
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css"
+    />
+    <style>
+      .leaflet-container {
+        height: 400px;
+        width: 100%;
+        margin: 0 auto;
+      }
+    </style>
+    <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -22,13 +35,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Visa Please</title>
-</head>
+    <title>Visa Please</title>
+  </head>
 
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-  <!--
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -38,29 +51,28 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/7.15.3/firebase-app.js"></script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.15.3/firebase-app.js"></script>
 
-<!-- TODO: Add SDKs for Firebase products that you want to use
+    <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/7.15.3/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.3/firebase-analytics.js"></script>
 
-<script>
-  // Your web app's Firebase configuration
-  // var firebaseConfig = {
-  //   apiKey: "AIzaSyDndHTVrMOWpEjOVTF2273GwyTmjNVDexs",
-  //   authDomain: "visa-please.firebaseapp.com",
-  //   databaseURL: "https://visa-please.firebaseio.com",
-  //   projectId: "visa-please",
-  //   storageBucket: "visa-please.appspot.com",
-  //   messagingSenderId: "906285988212",
-  //   appId: "1:906285988212:web:a6f7931e1f05988fdf9421",
-  //   measurementId: "G-TGEH50FMF6"
-  // };
-  // // Initialize Firebase
-  // firebase.initializeApp(firebaseConfig);
-  // firebase.analytics();
-</script>
-</body>
-
+    <script>
+      // Your web app's Firebase configuration
+      // var firebaseConfig = {
+      //   apiKey: "AIzaSyDndHTVrMOWpEjOVTF2273GwyTmjNVDexs",
+      //   authDomain: "visa-please.firebaseapp.com",
+      //   databaseURL: "https://visa-please.firebaseio.com",
+      //   projectId: "visa-please",
+      //   storageBucket: "visa-please.appspot.com",
+      //   messagingSenderId: "906285988212",
+      //   appId: "1:906285988212:web:a6f7931e1f05988fdf9421",
+      //   measurementId: "G-TGEH50FMF6"
+      // };
+      // // Initialize Firebase
+      // firebase.initializeApp(firebaseConfig);
+      // firebase.analytics();
+    </script>
+  </body>
 </html>
